[FEATURE][JIRA-123] Allowed ics filetype to be uploaded

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         {
             "name": "Boris van Katwijk",
             "email": "borisvankatwijk@happyhorizon.com"
+        },
+        {
+            "name": "Matthijs Iriks",
+            "email": "matthijsiriks@happyhorizon.com"
         }
     ],
     "minimum-stability": "dev",
